RND-145: possible IE9 promo alignment fix

--- a/profiles/cr/themes/custom/campaign_base/sass/components/promo-header/_promo-header.scss
+++ b/profiles/cr/themes/custom/campaign_base/sass/components/promo-header/_promo-header.scss
@@ -86,7 +86,8 @@
     right: 0;
     left: 0;
     width: 100%;
-    transform: translateY(-50%);
+  // CHECK THIS!
+  @include translateY(-50%);
   }
   .promo-header__content-inner {
     max-width: 600px;
